[package]
name = "falling-snow"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
termgrid = { git = "https://github.com/twallie/termgrid.git", branch = "0.3.0-dev", version = "0.3.0" }
